Update dependencies and fix a few issues